<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_projects"
        android:icon="@drawable/ic_projects"
        android:title="@string/nav_projects" />

    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/nav_tasks" />

    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
